--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
+    "uuidv4": "^6.2.3",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.3",
+    "@types/uuidv4": "^5.0.0",
     "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
